sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:15: error: not found: value i
if(plusPetit(i,i+1)){
             ^